--- a/src/components/collection/form/form.module.css
+++ b/src/components/collection/form/form.module.css
@@ -10,7 +10,7 @@
 .form {
   width: 100%;
   max-width: 400px;
-  background: #e31ffd04;
+  background: white;
   border-radius: 8px;
   padding: 2rem;
   box-sizing: border-box;
@@ -20,57 +20,56 @@
   margin-bottom: 20px;
   text-align: center;
   font-size: 1.5rem;
-  color: #3d023d;
+  color: #3b046e;
 }
 
 .inputGroup {
-  margin-bottom: 1.5rem;
+  margin-bottom: 15px;
 }
 
 .inputGroup label {
   display: block;
-  margin-bottom: 0.5rem;
+  padding: 7px;
   font-weight: bold;
   color: #555;
 }
 
 .inputGroup input {
-  width: 100%;
-  padding: 0.8rem;
+    display: flex;
+      align-items: center;
+  position: relative;
+  width: 300px;
+  padding: 7px;
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 1rem;
 }
 
 .passwordWrapper {
-  display: flex;
   align-items: center;
   position: relative;
 }
 
 .passwordWrapper input {
   flex: 1;
-  padding-right: 2.5rem; 
+  width: 300px;
+  padding: 7px;
 }
 
-.eyeButton {
+.eyeIcon {
+  top: 1px;
   position: absolute;
-  right: 0.5rem;
-  background: none;
-  border: none;
-  font-size: 1.2rem;
+  right: 42px; 
   cursor: pointer;
-  color: #555;
+  font-size: 23px; 
 }
 
-.eyeButton:hover {
-  color: #333;
-}
+
 
 .submitButton {
-  width: 100%;
-  padding: 0.8rem;
-  background-color: #770e6e;
+  width: 300px;
+  padding: 7px;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 4px;
@@ -80,7 +79,7 @@
 }
 
 .submitButton:hover {
-  background-color: #3d023d;
+  background-color: #4546a0;
 }
 
 
