--- a/src/components/collection/form/form.module.css
+++ b/src/components/collection/form/form.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f9f9f9;
+  background-color: #636363;
   padding: 1rem;
 }
 
