--- a/src/pages/main/styles.module.css
+++ b/src/pages/main/styles.module.css
@@ -4,6 +4,9 @@
     align-items: center;
     justify-content: center;
 
+    & * {
+        box-sizing: border-box;
+    }
 }
 
 .title {
@@ -98,11 +101,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 300px;
-    height: 200px;
+    width: 200px;
+    height: 100px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 1rem;
+    cursor: pointer;
 }
 
 .friend_name {
@@ -111,15 +115,4 @@
 
 .friend_email {
     font-size: 1rem;
-}
-
-.button_send {
-    width: 140px;
-    height: 40px;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: white;
-    font-size: 1.2rem;
-    cursor: pointer;
-    margin-top: 15px;
 }
